force-app/main/default/objects/ProspectFeatureUpdate__e/ProspectFeatureUpdate__e.object-meta.xml
<CustomObject>
    <description>Platform Event used to sync Data Cloud prospect features into Prospect__c.</description>
    <label>Prospect Feature Update</label>
    <pluralLabel>Prospect Feature Updates</pluralLabel>
</CustomObject>