force-app/main/default/objects/ProspectFeatureUpdate__e/fields/FitScore__c.field-meta.xml
<CustomField>
    <fullName>FitScore__c</fullName>
    <label>Fit Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>