force-app/main/default/objects/ProspectFeatureUpdate__e/fields/ProspectExternalId__c.field-meta.xml
<CustomField>
    <fullName>ProspectExternalId__c</fullName>
    <label>Prospect External ID</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>