force-app/main/default/objects/ProspectFeatureUpdate__e/fields/ScoutingFeaturesJson__c.field-meta.xml
<CustomField>
    <fullName>ScoutingFeaturesJson__c</fullName>
    <label>Scouting Features JSON</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>