force-app/main/default/objects/ProspectFeatureUpdate__e/fields/ScoutingScore__c.field-meta.xml
<CustomField>
    <fullName>ScoutingScore__c</fullName>
    <label>Scouting Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>