force-app/main/default/objects/ProspectFeatureUpdate__e/fields/ScoutingSummary__c.field-meta.xml
<CustomField>
    <fullName>ScoutingSummary__c</fullName>
    <label>Scouting Summary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>