force-app/main/default/objects/ProspectFeatureUpdate__e/fields/TopRisks__c.field-meta.xml
<CustomField>
    <fullName>TopRisks__c</fullName>
    <label>Top Risks</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>