force-app/main/default/objects/ProspectFeatureUpdate__e/fields/TopStrengths__c.field-meta.xml
<CustomField>
    <fullName>TopStrengths__c</fullName>
    <label>Top Strengths</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>